--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1373,7 +1373,7 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C02053102GUPHCDUE</string>
+			<string>D02053102GUPHCDUE</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
